update getCasesNotes to get notes based all combination of type and subtypes